# GuitarPIdal

./: .gitmodules  DAC.py  lcd.py  main.py  pio_specializations.py  plotter.py  results.txt
C_library/: ADC.h  CMakeLists.txt  DAC.h  Fourier_KISS.h  I2C.h  LCD.h  compile.sh  main.c
